--- a/front-end/css/eventos.css
+++ b/front-end/css/eventos.css
@@ -21,6 +21,7 @@ h2 {
     font-size: 18px;
     line-height: 1.5;
     margin-bottom: 20px;
+    text-align: center;
 }
 .timeline {
     display: flex;
