Update: Conexão Interface com BD usando PHP.

--- a/front-end/css/administracao.css
+++ b/front-end/css/administracao.css
@@ -11,7 +11,7 @@ h2 {
     margin-bottom: 30px;
 }
 .section {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     background-color: rgb(255, 255, 255);
     width: 100%;
     border-bottom: #2c2c2c 5px;
@@ -23,6 +23,28 @@ h2 {
     margin-bottom: 20px;
     text-align: center;
 }
+
+.add-buttons {
+    margin-bottom: 10px;
+}
+  
+.add {
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.add a {
+    text-decoration: none;
+    color: #fff;
+}
+
+
 .timeline {
     display: flex;
     flex-wrap: wrap;
@@ -47,7 +69,7 @@ h2 {
     margin-bottom: 10px;
 }
 .timeline-event button {
-    padding: 10px 20px;
+    padding: 10px 30px;
     background-color: #000;
     color: #fff;
     border: none;
@@ -55,6 +77,7 @@ h2 {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-left: 10px;
 }
 .timeline-event a {
     text-decoration: none;
