--- a/front-end/css/minha-galeria.css
+++ b/front-end/css/minha-galeria.css
@@ -29,6 +29,11 @@
     cursor: pointer;
     margin-left: 10px;
   }
+
+  .add-drawing a {
+    text-decoration: none;
+    color: #fff;
+  }
   
   .gallery-images {
     display: flex;
