--- a/front-end/css/cadastro.css
+++ b/front-end/css/cadastro.css
@@ -7,7 +7,7 @@ body {
   
   .login-box {
     width: 350px;
-    height: 500px;
+    height: 530px;
     background: #fff;
     color: #000;
     top: 50%;
@@ -65,12 +65,13 @@ body {
   }
   
   .bottom-text {
+    margin-top: 15px;
     bottom: 30px;
     left: 50%;
     width: 100%;
     text-align: center;
     font-size: 14px;
-    color: #666;
+    color: #000000;
     padding: 20px;
     box-sizing: border-box;
   }
