--- a/front-end/css/casas-artisticas.css
+++ b/front-end/css/casas-artisticas.css
@@ -42,7 +42,7 @@
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -63,8 +63,8 @@
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: #000000;
+  font-size: 25px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
