--- a/front-end/css/consultar-casa.css
+++ b/front-end/css/consultar-casa.css
@@ -5,14 +5,14 @@
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     width: 100%;
-    align-items: center;
-  }
+    position: center;  
+}
   
   .casa-header {
-    display: flex;
-    align-items: center;
+    position: center;
     justify-content: space-between;
     margin-bottom: 20px;
+    margin-left: 390px;
   }
   
   .casa-nome {
@@ -29,6 +29,7 @@
   .casa-info {
     display: flex;
     flex-wrap: wrap;
+    margin: 0px 100px;
   }
   
   .casa-info p {
