--- a/front-end/css/consultar-evento.css
+++ b/front-end/css/consultar-evento.css
@@ -3,14 +3,20 @@
     justify-content: center;
     position: relative;
     align-items: center;
+    width: 500px;
     margin: 20px;
     background-color: #f8f8f8;
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    margin-left: 350px;
   }
   
   .event-info {
     padding: 20px;
+  }
+
+  .event-info h2{
+    margin-bottom: 30px;
   }
   
   .event-name {
